--- a/static/index.html
+++ b/static/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>RobotlegsJS CreateJS Boilerplate</title>
+        <link rel="stylesheet" href="styles/main.css" />
+        <link rel="stylesheet" href="styles/example.css" />
+        <link rel="manifest" href="manifest.json" />
 
-<head>
-  <meta charset="UTF-8">
-  <title>RobotlegsJS CreateJS Boilerplate</title>
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/example.css">
-  <link rel="manifest" href="manifest.json">
+        <script>
+            if (navigator.serviceWorker) {
+                navigator.serviceWorker
+                    .register("service-worker.js")
+                    .then(function() {
+                        console.log("service worker installed");
+                    })
+                    .catch(function(err) {
+                        console.log("Error", err);
+                    });
+            }
+        </script>
 
-  <script>
-    if (navigator.serviceWorker) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(function () {
-          console.log('service worker installed');
-        })
-        .catch(function (err) {
-          console.log('Error', err);
-        });
-    }
-  </script>
+        <script src="<%= htmlWebpackPlugin.files.webpackConcat.createjs %>"></script>
+        <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+    </head>
 
-  <script src="<%= htmlWebpackPlugin.files.webpackConcat.createjs %>"></script>
-  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-</head>
+    <body>
+        <header class="CreateJS">
+            <h1>integration with <a target="_blank" href="https://createjs.com/">CreateJS</a></h1>
+            <p>
+                This example shows how to integrate <code>RobotlegsJS</code> framework with <code>EaselJS</code>. Click on the logo to see
+                some action!
+            </p>
+        </header>
 
-<body>
-  <header class="CreateJS">
-    <h1>integration with <a target="_blank" href="https://createjs.com/">CreateJS</a></h1>
-    <p>This example shows how to integrate <code>RobotlegsJS</code> framework with <code>EaselJS</code>. Click on the logo to see some action!</p>
-  </header>
+        <canvas id="canvas" width="960" height="400"></canvas>
 
-  <canvas id="canvas" width="960" height="400"></canvas>
-
-  <script type="text/javascript">
-    window.onload = initGame;
-  </script>
-</body>
-
+        <script type="text/javascript">
+            window.onload = initGame;
+        </script>
+    </body>
 </html>
