--- a/packages/phaser/static/index-template.html
+++ b/packages/phaser/static/index-template.html
@@ -21,7 +21,7 @@
         </script>
 
         <script src="<%= htmlWebpackPlugin.files.webpackConcat.phaser %>"></script>
-        <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+        <script src="<%= htmlWebpackPlugin.files.js %>"></script>
     </head>
 
     <body>
