--- a/packages/phaser-ce/static/index-template.html
+++ b/packages/phaser-ce/static/index-template.html
@@ -20,7 +20,7 @@
         </script>
 
         <script src="<%= htmlWebpackPlugin.files.webpackConcat.phaser %>"></script>
-        <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+        <script src="<%= htmlWebpackPlugin.files.js %>"></script>
     </head>
     <body>
         <script type="text/javascript">
