--- a/packages/createjs/static/index-template.html
+++ b/packages/createjs/static/index-template.html
@@ -21,7 +21,7 @@
         </script>
 
         <script src="<%= htmlWebpackPlugin.files.webpackConcat.createjs %>"></script>
-        <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+        <script src="<%= htmlWebpackPlugin.files.js %>"></script>
     </head>
 
     <body>
