apply prettier format

--- a/packages/phaser/static/index-template.html
+++ b/packages/phaser/static/index-template.html
@@ -11,10 +11,10 @@
             if (navigator.serviceWorker) {
                 navigator.serviceWorker
                     .register("service-worker.js")
-                    .then(function() {
+                    .then(function () {
                         console.log("service worker installed");
                     })
-                    .catch(function(err) {
+                    .catch(function (err) {
                         console.log("Error", err);
                     });
             }
@@ -28,8 +28,8 @@
         <header class="Phaser">
             <h1>integration with <a target="_blank" href="http://phaser.io">Phaser</a></h1>
             <p>
-                This example shows how to integrate <code>RobotlegsJS</code> framework with <code>Phaser</code>. Click on the screen to see
-                some action!
+                This example shows how to integrate <code>RobotlegsJS</code> framework with
+                <code>Phaser</code>. Click on the screen to see some action!
             </p>
         </header>
 
