apply prettier format

--- a/packages/pixi-palidor/static/index-template.html
+++ b/packages/pixi-palidor/static/index-template.html
@@ -11,10 +11,10 @@
             if (navigator.serviceWorker) {
                 navigator.serviceWorker
                     .register("service-worker.js")
-                    .then(function() {
+                    .then(function () {
                         console.log("service worker installed");
                     })
-                    .catch(function(err) {
+                    .catch(function (err) {
                         console.log("Error", err);
                     });
             }
@@ -27,8 +27,8 @@
         <header class="PixiJS">
             <h1>integration with <a target="_blank" href="http://www.pixijs.com/">PixiJS</a></h1>
             <p>
-                This example shows how to integrate <code>RobotlegsJS</code> framework with <code>PixiJS</code>. Click on the buttons to see
-                some action!
+                This example shows how to integrate <code>RobotlegsJS</code> framework with
+                <code>PixiJS</code>. Click on the buttons to see some action!
             </p>
         </header>
 
